# OpenGL_VS

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Camera.h  Mesh.h  Model.h  Shader.h
shaders/: First_Fragment_Shader.frag  First_Vertex_Shader.vert  Light_Vertex_Shader.vert
src/: main.cpp
